--- a/home.css
+++ b/home.css
@@ -1,13 +1,28 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Fira Sans', sans-serif;
 }
+
+.heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.heading video {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .Navbar-Menu{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('images/back.jpg');
+    background-image: linear-gradient(rgba(245, 241, 12, 0.2),rgba(141, 211, 10, 0.2)),url('images/back.jpg');
     background-repeat: no-repeat;
     background-size: cover;
    }
@@ -16,8 +31,8 @@
     height: 80px;
     padding: 10px 20px; 
     position: relative;
-    top: 30px;
-    background-color: #f0f0f0;
+    top: 0px;
+    background-color: #f1f505b9;
     box-shadow: 2px -1px 10px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 2px -1px 10px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px -1px 10px 2px rgba(0,0,0,0.75);
@@ -29,14 +44,14 @@
     float: left;     
 }
 .leftside img{
-    width: 140px; 
-    height: 140px; 
+    width: 100px; 
+    height: 100px; 
     border-radius: 50%; 
     overflow: hidden; 
     object-fit: cover; 
     position: absolute;
-    top:-50px;
-    left: 50px;
+    top:2px;
+    left: 0px;
 }
 .rightside{
     width: auto;
@@ -108,7 +123,7 @@
     transition: 0.5s;
 }
 #Sweet-Bakery:hover{
-    background-color: #7c4a21;
+    background-color: #201f1e;
 }
 
 .heading video {
@@ -332,7 +347,7 @@
 .feedback-background{
     width: 100%;
     height: 60vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('https://media.istockphoto.com/photos/homemade-sweet-chocolate-cupcakes-picture-id615286712?k=20&m=615286712&s=612x612&w=0&h=YQkiXhBHecMn1Oi2228WL0KmVC9KHCTriP8vB49OGHk=');
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('images/logo.png');
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
